--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ body, html {
 
 h1 {
     font-family: 'VCR_OSD_MONO', sans-serif;
-    margin-top: -80px;
+    margin-top: -110px;
+    margin-bottom: 30px;
     font-size: 2rem;
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
@@ -65,6 +66,10 @@ h1 {
     padding: 20px;
     cursor: pointer;
     z-index: 3;
+}
+
+.tv:hover {
+    transform: scale(1.05);
 }
 
 .tv.expand {
@@ -109,12 +114,15 @@ h1, .logo {
 }
 
 .footer-logo {
-    max-height: 380px;
-    margin-bottom: -140px;
+    max-height: 450px;
+    margin-bottom: -160px;
+    pointer-events: none;
+    z-index: 2;
 }
 
 .footer-menu {
     max-height: 110px;
+    z-index: 1;
 }
 
 .menu-container {
@@ -159,7 +167,19 @@ h1, .logo {
     flex-direction: column;
     opacity: 0;
     transition: opacity 1s ease;
-    /* box-shadow: inset 0px -50px 50px -30px rgba(255, 255, 255, 0.834);  */
+    /* box-shadow: inset 0px -100px 50px -30px rgba(15, 10, 40, 0.834); */
+}
+
+.grid-container::before {
+    content: '';
+    position: fixed;
+    top: 70;
+    left: 0;
+    width: 100%;
+    height: 68%;
+    box-shadow: inset 0px -100px 40px -20px rgba(15, 10, 27, 0.949);
+    pointer-events: none; 
+    z-index: 2; 
 }
 
 .image-grid {
@@ -195,14 +215,15 @@ h1, .logo {
 
 .about-content {
     gap: 20px;
-    padding: 100px;
     display: flex;
+    padding-left: 250px;
+    padding-right: 200px;
+    padding-top: 50px;
 }
 
 .about-content img {
-    max-width: 40%;
-    max-height: 70%;
-    height: auto;
+    max-width: 420px;
+    max-height: auto;
 }
 
 .about-content p {
