--- a/style.css
+++ b/style.css
@@ -166,8 +166,8 @@ h1, .logo {
     display: flex;
     flex-direction: column;
     opacity: 0;
-    transition: opacity 1s ease;
-    /* box-shadow: inset 0px -100px 50px -30px rgba(15, 10, 40, 0.834); */
+    transition: opacity 1s ease; 
+    box-shadow: 0px 30px 30px rgba(15, 10, 27, 0.949);
 }
 
 .grid-container::before {
