--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body, html {
     z-index: -2;
     transition: opacity 1s ease;
     cursor: url('media/xursor.png'), auto;
+    background-color: black;
 }
 
 .content {
@@ -409,6 +410,18 @@ h1, .logo {
     .about-text {
         margin-top: -300px;
         max-width: 300px;
+    }
+
+    .footer {
+        position: fixed;
+        bottom: 10px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        z-index: 2;
+        opacity: 0;
+        transition: opacity 2s ease;
     }
 
 }
