--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body, html {
     align-items: center;
     position: absolute;
     top: 20px;
-    left: 0;
+    left: 7px;
     width: 100%;
     height: 100%;
     text-align: center;
@@ -215,7 +215,7 @@ h1, .logo {
 }
 
 .about-content {
-    gap: 20px;
+    gap: 40px;
     display: flex;
     padding-left: 250px;
     padding-right: 200px;
@@ -228,7 +228,7 @@ h1, .logo {
 }
 
 .about-content p {
-    margin-top: 300px;
+    margin-top: 150px;
     flex-grow: 1;
     font-size: 1.2rem;
     line-height: 1.5;
@@ -390,7 +390,9 @@ h1, .logo {
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        margin-left: -70px;
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-top: 100px;
     }
     
     .about-content img {
@@ -400,16 +402,15 @@ h1, .logo {
     
     .about-content p {
         flex-grow: 1;
-        font-size: 1rem;
+        font-size: .7rem;
         line-height: 1.5;
         color: white;
-        max-width: 300px;
         text-align: center;
+        padding: 20px;
     }
 
     .about-text {
-        margin-top: -300px;
-        max-width: 300px;
+        margin-top: -310px;
     }
 
     .footer {
