--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ h1, .logo {
     top: 70;
     left: 0;
     width: 100%;
-    height: 68%;
+    height: 68vh;
     box-shadow: inset 0px -100px 40px -20px rgba(15, 10, 27, 0.949);
     pointer-events: none; 
     z-index: 2; 
@@ -423,10 +423,6 @@ h1, .logo {
         z-index: 2;
         opacity: 0;
         transition: opacity 2s ease;
-    }
-    
-    .grid-container::before {
-        height: 90%;
     }
 
 }
