--- a/style.css
+++ b/style.css
@@ -410,7 +410,7 @@ h1, .logo {
     }
 
     .about-text {
-        margin-top: -310px;
+        margin-top: -190px;
     }
 
     .footer {
@@ -423,6 +423,10 @@ h1, .logo {
         z-index: 2;
         opacity: 0;
         transition: opacity 2s ease;
+    }
+
+    .grid-container::before {
+        height: 80%;
     }
 
 }
