--- a/style.css
+++ b/style.css
@@ -361,8 +361,8 @@ h1, .logo {
     }
 
     .image-grid {
-        column-count: 2; /* Reduce the number of columns to 2 */
-        column-gap: 10px; /* Adjust the gap between columns, if necessary */
+        column-count: 2; 
+        column-gap: 10px; 
     }
 
     .footer-logo {
